--- a/index.html
+++ b/index.html
@@ -388,31 +388,31 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li id="menu-item-535" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-9 current_page_item menu-item-535 active">
 
-								<a title="Home" href="index.php">Home</a>
+								<a title="Home" href="index.html">Home</a>
 
 							</li>
                             <li id="menu-item-978" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-978 dropdown"><a title="Corporate" href="/#" data-toggle="dropdown" class="dropdown-toggle disabled" aria-haspopup="true">Corporate <span class="caret"></span></a>
                                 <ul role="menu" class=" dropdown-menu">
-                                    <li id="menu-item-723" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-723"><a title="The KGroup" href="the-kgroup.php">The KGroup</a></li>
-                                    <li id="menu-item-726" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-726"><a title="Vision &amp; Mission" href="vision-mission.php">Vision &#038; Mission</a></li>
-                                    <li id="menu-item-725" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-725"><a title="Our Core Competencies" href="our-core-competencies.php">Our Core Competencies</a></li>
-                                    <li id="menu-item-724" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-724"><a title="CSR" href="csr.php">CSR</a></li>
-                                    <li id="menu-item-727" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-727"><a title="History" href="history.php">History</a></li>
+                                    <li id="menu-item-723" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-723"><a title="The KGroup" href="the-kgroup.html">The KGroup</a></li>
+                                    <li id="menu-item-726" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-726"><a title="Vision &amp; Mission" href="vision-mission.html">Vision &#038; Mission</a></li>
+                                    <li id="menu-item-725" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-725"><a title="Our Core Competencies" href="our-core-competencies.html">Our Core Competencies</a></li>
+                                    <li id="menu-item-724" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-724"><a title="CSR" href="csr.html">CSR</a></li>
+                                    <li id="menu-item-727" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-727"><a title="History" href="history.html">History</a></li>
                                 </ul>
                             </li>
                             <li id="menu-item-1014" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1014 dropdown"><a title="Services" href="#" data-toggle="dropdown" class="dropdown-toggle disabled" aria-haspopup="true">Services <span class="caret"></span></a>
                                 <ul role="menu" class=" dropdown-menu">
-                                    <li id="menu-item-645" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-645"><a title="Real Estate" href="real-estate.php">Real Estate</a></li>
-                                    <li id="menu-item-646" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-646"><a title="Agriculture" href="agriculture-2.php">Agriculture</a></li>
-                                    <li id="menu-item-647" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-647"><a title="Consultancy" href="consultancy.php">Consultancy</a></li>
-                                    <li id="menu-item-648" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-648"><a title="Mining" href="mining.php">Mining</a></li>
-                                    <li id="menu-item-649" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-649"><a title="Power Sector" href="power-sector.php">Power Sector</a></li>
-                                    <li id="menu-item-733" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-733"><a title="Steel" href="steel.php">Steel</a></li>
+                                    <li id="menu-item-645" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-645"><a title="Real Estate" href="real-estate.html">Real Estate</a></li>
+                                    <li id="menu-item-646" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-646"><a title="Agriculture" href="agriculture-2.html">Agriculture</a></li>
+                                    <li id="menu-item-647" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-647"><a title="Consultancy" href="consultancy.html">Consultancy</a></li>
+                                    <li id="menu-item-648" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-648"><a title="Mining" href="mining.html">Mining</a></li>
+                                    <li id="menu-item-649" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-649"><a title="Power Sector" href="power-sector.html">Power Sector</a></li>
+                                    <li id="menu-item-733" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-733"><a title="Steel" href="steel.html">Steel</a></li>
                                 </ul>
                             </li>
-                            <li id="menu-item-730" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-730"><a title="Our Clients" href="our-clients.php">Our Clients</a></li>
-                            <li id="menu-item-631" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-631"><a title="Photo Gallery" href="gallery.php">Photo Gallery</a></li>
-                            <li id="menu-item-633" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-633"><a title="Contact us" href="contact.php">Contact us</a></li>
+                            <li id="menu-item-730" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-730"><a title="Our Clients" href="our-clients.html">Our Clients</a></li>
+                            <li id="menu-item-631" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-631"><a title="Photo Gallery" href="gallery.html">Photo Gallery</a></li>
+                            <li id="menu-item-633" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-633"><a title="Contact us" href="contact.html">Contact us</a></li>
                             <li class="social-icons">
                                 <ul>
 
